--- a/.github/workflows/master-push-build.yml
+++ b/.github/workflows/master-push-build.yml
@@ -40,4 +40,4 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: mvn sourcecheck
-        run: ./mvnw -V --no-transfer-progress -Psourcecheck -Dcheckstyle.failOnViolation=true checkstyle:checkstyle
+        run: ./mvnw -V --no-transfer-progress -Dnoassembly -Dmaven.compiler.fork=false -Dmaven.test.failure.ignore=true -Dsurefire.rerunFailingTestsCount=2 install
